...
    <string name="a11y_state_disabled">disabled</string>
    <string name="a11y_state_expanded">expanded</string>
    <string name="a11y_state_collapsed">collapsed</string>

    <!-- A11Y action -->
    <string name="a11y_action_date_picker_content_description">Date picker button</string>
    <string name="a11y_action_sort_content_description">Sort button</string>
    <string name="a11y_action_search_content_description">Search button</string>
    <string name="a11y_action_clear_field_content_description">Clear field button</string>
    <string name="a11y_action_show_password_content_description">Show password button</string>
    <string name="a11y_action_hide_password_content_description">Hide password button</string>
    <string name="a11y_action_delete_content_description">Delete %1$s button</string>
    <string name="a11y_action_edit_content_description">Edit %1$s button</string>
    <string name="a11y_action_share_content_description">Share %1$s button</string>

    <string name="a11y_dialog_delete_confirmation_content_description">Delete %1$s confirmation dialog</string>

    <!-- A11Y component -->
    <string name="a11y_date_picker">Date picker, currently: %1$s</string>
    <string name="a11y_input_field">Input field</string>
    <string name="a11y_search_field">Search field</string>
    <string name="a11y_select_field">Select field, currently %1$s. Tap to expand menu.</string>
    <string name="a11y_select_field_menu">Menu options</string>
    <string name="a11y_password_field">Password field</string>
    <string name="a11y_checkbox">Checkbox</string>
    <string name="a11y_switch">Switch</string>
    <string name="a11y_button">Button</string>
...

    <!-- Authentication labels -->
    <string name="auth_action_sign_out_label">Sign out</string>

    <!-- User profile labels -->
    <string name="user_profile_label">My Profile</string>
    <string name="user_profile_action_content_description">Action to navigate to profile</string>

    <!-- File upload labels -->
    <string name="file_action_view_label">View file</string>
    <string name="file_action_upload_label">Upload file</string>

    <!-- Datetime labels -->
    <string name="datetime_years_old">%1$s years old</string>
    <string name="datetime_months_old">%1$s months old</string>

    <!-- Sort labels -->
    <string name="sort_default_label">Default order</string>
    <string name="sort_firstname_label">Order by firstname</string>
    <string name="sort_lastname_label">Order by lastname</string>
    <string name="sort_name_label">Order by name</string>
    <string name="sort_dob_label">Order by date of birth</string>
    <string name="sort_date_label">Order by date</string>
    <string name="sort_title_label">Order by title</string>

...
    <string name="screen_CensoredText_counter_text">This feature was used %1$d times</string>

    <!-- Owner Screen -->
    <string name="screen_Owner_search_label">Search...</string>
    <string name="screen_Owner_image_description">Owner image</string>
    <string name="screen_Owner_form_content_description">Owner form</string>
    <string name="screen_Owner_form_firstname_label">Firstname</string>
    <string name="screen_Owner_form_lastname_label">Lastname</string>
    <string name="screen_Owner_form_full_name_label">Name</string>
    <string name="screen_Owner_form_username_label">Username</string>
    <string name="screen_Owner_form_dob_label">Date of Birth</string>
    <string name="screen_Owner_fab_action_add_content_description">Add new owner</string>
    <string name="screen_Owner_list_item_content_description">Swipeable owner list item %1$s, click to view owner details</string>
    <string name="screen_Owner_action_cats_content_description">Owner's cats action</string>
    <string name="screen_Owner_section_personal_details_title">Personal details</string>
    <string name="screen_Owner_section_address_title">Address</string>
    <string name="screen_Owner_section_cats_title">Cats</string>
    <string name="screen_Owner_action_cats_label_one">1 Cat</string>
...
